完成路由跳转

--- a/src/components/Home/index.less
+++ b/src/components/Home/index.less
@@ -149,6 +149,7 @@
         .homeSSCSedCon{
           width: 100%;
           height:1.8rem;
+          overflow: hidden;
           background-color: blue;
           .homeSSCSedConUl{
             width: 100%;
