--- a/src/components/Footer/index.less
+++ b/src/components/Footer/index.less
@@ -7,22 +7,27 @@
   bottom: 0;
   left: 0;
   padding: 0.06rem 0;
-  display: block;
   // 导航栏样式
-  .footerNavA{
-    height: 100%;
-    display: block;
-    float: left;
-    box-sizing: border-box;
-    overflow: hidden;
-    img {
-      display: block;
-      width: 0.36rem;
-      height: 0.33rem;
-      margin :0 auto;
-      background-size :contain;
-      background-repeat :no-repeat;
+  .footerContent{
+    display: flex;
+    .tabbar-item{
+      flex: 1;
+      .footerItem{
+        width: 100%;
+        height: 100%;
+        .iconfont{
+          font-size: 22px;
+          text-align: center;
+        }
+        .iconText{
+          font-size: 10px;
+          margin-top: -8px;
+          text-align: center;
+        }
+      }
+      .active{
+        color:red;
+      }
     }
   }
 }
-  
