--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -22,6 +22,7 @@
       color :#f0374e;
     }
   }
+  // 中部搜索框样式
   .headerSearch{
     width :2.712rem;
     height :0.3rem;
@@ -45,6 +46,18 @@
     }
     input::-webkit-input-placeholder{
       color: #b5bec5; 
+    }
+  }
+  // 右边菜单按钮样式
+  .headerCate{
+    width: 0.43rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    .iconfont{
+      font-size: 20px;
     }
   }
 }
