--- a/src/components/Home/index.less
+++ b/src/components/Home/index.less
@@ -96,13 +96,12 @@
   // 设置的是其余部分
   .homeSec{
     width:100%;
-    height: 30rem;
+    //height: 30rem;
     background-color: pink;
     // 今日秒杀样式
     .homeSecSeck{
       width: 100%;
       height:2.8rem;
-      background-color: red;
       .homeSecSeckTitle{
         width: 100%;
         height:0.41rem;
@@ -129,12 +128,10 @@
       .homeSecSeckCont{
         width: 100%;
         height: 2.29rem;
-        background-color: rosybrown;
         // 倒计时样式
         .homeSecSeckContSed{
           width: 100%;
           display: block;
-          background-color: pink;
           padding: .05rem 0 0.2rem 0;
           .homeSSCSedTime{
             width: 100%;
@@ -142,7 +139,8 @@
             display: block;
             text-align: center;
             line-height: 0.25rem;
-            background-color: red;
+            font-size: 0.2rem;
+            font-weight: 700;
           }
         }
         // 内容区样式
@@ -150,7 +148,6 @@
           width: 100%;
           height:1.8rem;
           overflow: hidden;
-          background-color: blue;
           .homeSSCSedConUl{
             width: 100%;
             height: 100%;
@@ -209,14 +206,148 @@
     .homeSecStudy{
       width: 100%;
       height:1rem;
-      background-color: green;
+      border-top: .2rem solid pink;
+      border-bottom: .2rem solid pink;
+      a{
+        width: 100%;
+        height: 100%;
+        img{
+          width:100%;
+          height: 100%;
+          display: block;
+        }
+      }
     }
 
     // 图书城样式
     .homeSecBook{
       width: 100%;
-      height:6.45rem;
-      background-color: white;
+      //height:6.35rem;
+      border-bottom: 0.1rem solid #eee;
+      // 图书城的头部样式
+      .homeSecBookHead{
+        width: 100%;
+        height: 1.62rem;
+        .homeSecBookHeadTitle{
+          width: 100%;
+          height: 0.62rem;
+          .homeSecBookHeadTitleTit{
+            width: 100%;
+            height: 0.41rem;
+            img{
+              width: 100%;
+              height: 100%;
+              display: block;
+            }
+          }
+          .homeSecBookHeadTitleSub{
+            width: 100%;
+            height: 0.21rem;
+            display: block;
+            font-size: 0;
+            line-height: 0;
+            text-align: center;
+            overflow: hidden;
+            li{
+              display: inline-block;
+              line-height: 0.21rem;
+              margin-right: 0.05rem;
+              position: relative;
+              a{
+                display: block;
+                color:#323232;
+                font-size: 0.12rem;
+                padding-right: 0.168rem;
+                position: relative;
+                i{
+                  display: block;
+                  height: 100%;
+                  width: 0.168rem;
+                  line-height: 0.21rem;
+                  position: absolute;
+                  right: 0;
+                  top: -0.005rem;
+                  font-size: 0.12rem;
+                }
+              }
+            }
+          }
+        }
+        .homeSecBookHeadImg{
+          width: 100%;
+          height: 1rem;
+          a{
+            width: 100%;
+            height: 100%;
+            img{
+              width: 100%;
+              height: 100%;
+              display: block;
+            }
+          }
+        }
+      }
+      // 图书城的内容区
+      .homeSecBookCont{
+        width: 100%;
+        display: block;
+        .homeSecBookContList{
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-wrap: wrap;
+          overflow: hidden;
+          .homeSecBookContItem{
+            width: 1.24rem;
+            height: 1.56rem;
+            border-right: 1px solid #eff4fa;
+            border-bottom: 1px solid #eff4fa;
+            a{
+              display: block;
+              background-color: #fff;
+              position: relative;
+              height: 100%;
+              overflow: hidden;
+              text-align: center;
+              .title{
+                display: block;
+                padding: 0.156rem 0.1rem 0 0.1rem;
+                text-align: center;
+                b{
+                  display: block;
+                  height: 0.16rem;
+                  overflow: hidden;
+                  word-break: break-all;
+                  font-weight: normal;
+                  color: #323232;
+                  font-size: 0.13rem;
+                  line-height: 0.16rem;
+                }
+                i{
+                  display: block;
+                  height: 0.14rem;
+                  overflow: hidden;
+                  font-size: 0.12rem;
+                  line-height: 0.14rem;
+                  margin-top: 0.012rem;   
+                }
+              }
+              .img{
+                width: 100%;
+                height: 1rem;
+                display: block;
+                position: absolute;
+                img{
+                  width: 1rem;
+                  height: 1rem;
+                  margin: 0 auto;
+                }
+              }
+            }
+          }
+        }
+      }
+
     }
 
     // 服装鞋包样式
@@ -224,6 +355,194 @@
       width: 100%;
       height:5.6rem;
       background-color: skyblue;
+      // 图书城的头部样式
+      .homeSecCloHead{
+        width: 100%;
+        height: 1.62rem;
+        .homeSecCloHeadTitle{
+          width: 100%;
+          height: 0.62rem;
+          .homeSecCloHeadTitleTit{
+            width: 100%;
+            height: 0.41rem;
+            img{
+              width: 100%;
+              height: 100%;
+              display: block;
+            }
+          }
+          .homeSecCloHeadTitleSub{
+            width: 100%;
+            height: 0.21rem;
+            display: block;
+            font-size: 0;
+            line-height: 0;
+            text-align: center;
+            overflow: hidden;
+            li{
+              display: inline-block;
+              line-height: 0.21rem;
+              margin-right: 0.05rem;
+              position: relative;
+              a{
+                display: block;
+                color:#323232;
+                font-size: 0.12rem;
+                padding-right: 0.168rem;
+                position: relative;
+                i{
+                  display: block;
+                  height: 100%;
+                  width: 0.168rem;
+                  line-height: 0.21rem;
+                  position: absolute;
+                  right: 0;
+                  top: -0.005rem;
+                  font-size: 0.12rem;
+                }
+              }
+            }
+          }
+        }
+        .homeSecCloHeadImg{
+          width: 100%;
+          height: 1rem;
+          a{
+            width: 100%;
+            height: 100%;
+            img{
+              width: 100%;
+              height: 100%;
+              display: block;
+            }
+          }
+        }
+      }
+      // 内容样式
+      .homeSecCloCont{
+        width: 100%;
+        .homeSecCloContTop{
+          width: 100%;
+          height: 1.72rem;
+          // 设置的是内容头部左侧的样式
+          .homeSecCloContTopLeft{
+            width: 1.87rem;
+            height: 100%;
+            border-bottom: 1px solid #eee;
+            border-right: 1px solid #eee;
+            a{
+              width: 100%;
+              height:100%;
+              display: block;
+              position: relative;
+              .left{
+                display: table;
+                height: 100%;
+                padding: 0.084rem 0.1rem 0 0.1rem;
+                .title{
+                  vertical-align: middle;
+                  font-size: 0;
+                  b{
+                    display: block;
+                    height: 0.168rem;
+                    overflow: hidden;
+                    word-break: break-all;
+                    font-weight: normal;
+                    color: #323232;
+                    font-size: 0.13rem;
+                    line-height: 0.168rem;
+                  }
+                  i{
+                    display: block;
+                    height: 0.144rem;
+                    overflow: hidden;
+                    word-break: break-all;
+                    line-height: 0.144rem;
+                    margin-top: 0.024rem;
+                    font-size: 0.12rem;
+                  }
+                }
+                .img{
+                  width: 1.21rem;
+                  height: 1.21rem;
+                  position: absolute;
+                  bottom: 0.02rem;
+                  right: 0.02rem;
+                  z-index: 2 ;
+                  display: block;
+                  img{
+                    width: 100%;
+                    height: 100%;
+                    border: 0 none;
+                    vertical-align: middle;
+                  }
+                }
+              }
+            }
+          }
+          // 设置内容的头部右侧样式
+          .right{
+            width: 1.87rem;
+            height: 1.72rem;
+            float: left;
+            overflow: hidden;
+            .rightTop{
+              width: 100%;
+              height: 0.86rem;
+              a{
+                width: 100%;
+                height: 100%;
+                display: block;
+                background-color: #fff;
+                position: relative;
+                .textWrap{
+                  display: table;
+                  padding: 0.03rem 0.8rem 0.03rem 0.1rem;
+                  height: 100%;
+                  box-sizing: border-box;
+                  .title{
+                    display: table-cell;
+                    vertical-align: middle;
+                    font-size: 0;
+                    b{
+                      display: block;
+                      height: 0.168rem;
+                      overflow: hidden;
+                      word-break: break-all;
+                      font-weight: normal;
+                      color: #323232;
+                      font-size: 0.14rem;
+                      line-height: 0.168rem;
+                    }
+                    i{
+                      display: block;
+                      height: 0.144rem;
+                      overflow: hidden;
+                      word-break: break-all;
+                      font-size: 0.12rem;
+                      margin-top:0.024rem;
+                    }
+                  }
+                }
+                .img{
+                  position: absolute;
+                  bottom: 0.08rem;
+                  right: 0.06rem;
+                  display: block;
+                  width: 0.79rem;
+                  height: 0.79rem;
+                  z-index: 2;
+                  img{
+                    width: 100%;
+                    height: 100%;
+                    display: block;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
     
     // 聚食惠样式
@@ -231,8 +550,75 @@
       width: 100%;
       height:3.88rem;
       background-color: #eee;
-    }
+      border-bottom: 0.5rem solid transparent;
+      // 图书城的头部样式
+      .homeSecFoodHead{
+        width: 100%;
+        height: 1.62rem;
+        .homeSecFoodHeadTitle{
+          width: 100%;
+          height: 0.62rem;
+          .homeSecFoodHeadTitleTit{
+            width: 100%;
+            height: 0.41rem;
+            img{
+              width: 100%;
+              height: 100%;
+              display: block;
+            }
+          }
+          .homeSecFoodHeadTitleSub{
+            width: 100%;
+            height: 0.21rem;
+            display: block;
+            font-size: 0;
+            line-height: 0;
+            text-align: center;
+            overflow: hidden;
+            li{
+              display: inline-block;
+              line-height: 0.21rem;
+              margin-right: 0.05rem;
+              position: relative;
+              a{
+                display: block;
+                color:#323232;
+                font-size: 0.12rem;
+                padding-right: 0.168rem;
+                position: relative;
+                i{
+                  display: block;
+                  height: 100%;
+                  width: 0.168rem;
+                  line-height: 0.21rem;
+                  position: absolute;
+                  right: 0;
+                  top: -0.005rem;
+                  font-size: 0.12rem;
+                }
+              }
+            }
+          }
+        }
+        .homeSecFoodHeadImg{
+          width: 100%;
+          height: 1rem;
+          a{
+            width: 100%;
+            height: 100%;
+            img{
+              width: 100%;
+              height: 100%;
+              display: block;
+            }
+          }
+        }
+      }
+      // 内容样式
 
+    }
+    
   }
+  
 }
  
